Bug 283357 - KGPG crashes generating a key pair
Summary: KGPG crashes generating a key pair
Status: RESOLVED FIXED
Alias: None
Product: kgpg
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Mandriva RPMs Linux
: NOR crash
Target Milestone: ---
Assignee: Rolf Eike Beer
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-10-04 22:52 UTC by andrew brewster
Modified: 2011-10-27 21:30 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.7.3
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (6.05 KB, text/plain)
2011-10-26 23:14 UTC, Carlos Cámara
Details

Note You need to log in before you can comment on or make changes to this bug.
Description andrew brewster 2011-10-04 22:52:57 UTC
Application: kgpg (2.3.0)
KDE Platform Version: 4.4.5 (KDE 4.4.5)
Qt Version: 4.6.3
Operating System: Linux 2.6.33.7-desktop-2mnb x86_64
Distribution: "Mandriva Linux 2010.2"

-- Information about the crash:
Follow wizard to generate a key pair and click OK when passphrase has been entered and verified - crash occurs

 -- Backtrace:
Application: KGpg (kgpg), signal: Segmentation fault
[KCrash Handler]
#5  d_func (this=0x3ff0000000000000, data=0x18b8aa8 "Key-Type: RSA\nKey-Length: 2048\nName-Real: Andrew Brewster\nName-Email: abe.comm@ntlworld.com\nName-Comment: transactions\nPassphrase: %commit", 
    maxSize=138) at ../../src/corelib/io/qiodevice.h:168
#6  QIODevice::write (this=0x3ff0000000000000, data=
    0x18b8aa8 "Key-Type: RSA\nKey-Length: 2048\nName-Real: Andrew Brewster\nName-Email: abe.comm@ntlworld.com\nName-Comment: transactions\nPassphrase: %commit", maxSize=138) at io/qiodevice.cpp:1299
#7  0x00000000004431bb in write (this=0x1c09240, a=<value optimized out>, lf=true) at /usr/lib/qt4/include/QtCore/qiodevice.h:127
#8  KGpgTransaction::write (this=0x1c09240, a=<value optimized out>, lf=true) at /usr/src/debug/kdeutils-4.4.5/kgpg/transactions/kgpgtransaction.cpp:114
#9  0x000000000044a7cc in KGpgGenerateKey::postStart (this=0x1c09240) at /usr/src/debug/kdeutils-4.4.5/kgpg/transactions/kgpggeneratekey.cpp:104
#10 0x000000000044442d in KGpgTransaction::qt_metacall (this=0x1c09240, _c=QMetaObject::InvokeMetaMethod, _id=138, _a=0x7fff33a3b900)
    at /usr/src/debug/kdeutils-4.4.5/build/kgpg/kgpgtransaction.moc:90
#11 0x00007f085214d7b6 in QMetaObject::activate (sender=0x16845f0, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0x74696d6d6f6325) at kernel/qobject.cpp:3287
#12 0x00007f08520d5245 in QProcessPrivate::_q_startupNotification (this=0x21698c0) at io/qprocess.cpp:1072
#13 0x00007f08520d9929 in QProcess::qt_metacall (this=0x16845f0, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fff33a3bb20) at .moc/release-shared/moc_qprocess.cpp:113
#14 0x00007f08527af808 in KProcess::qt_metacall (this=0x3ff0000000000000, _c=25922216, _id=138, _a=0x74696d6d6f6325) at /usr/src/debug/kdelibs-4.4.5/build/kdecore/kprocess.moc:69
#15 0x0000000000492628 in KLineBufferedProcess::qt_metacall (this=0x3ff0000000000000, _c=25922216, _id=138, _a=0x74696d6d6f6325)
    at /usr/src/debug/kdeutils-4.4.5/build/kgpg/klinebufferedprocess.moc:74
#16 0x00000000004918e0 in GPGProc::qt_metacall (this=0x3ff0000000000000, _c=25922216, _id=138, _a=0x74696d6d6f6325) at /usr/src/debug/kdeutils-4.4.5/build/kgpg/gpgproc.moc:74
#17 0x00007f085214d7b6 in QMetaObject::activate (sender=0x214cf50, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0x74696d6d6f6325) at kernel/qobject.cpp:3287
#18 0x00007f085219a1be in QSocketNotifier::activated (this=0x3ff0000000000000, _t1=26) at .moc/release-shared/moc_qsocketnotifier.cpp:89
#19 0x00007f0852154573 in QSocketNotifier::event (this=0x214cf50, e=0x7fff33a3c1d0) at kernel/qsocketnotifier.cpp:317
#20 0x00007f0852d090cc in QApplicationPrivate::notify_helper (this=0x12499b0, receiver=0x214cf50, e=0x7fff33a3c1d0) at kernel/qapplication.cpp:4302
#21 0x00007f0852d0f6bb in QApplication::notify (this=0x1243f40, receiver=0x214cf50, e=0x7fff33a3c1d0) at kernel/qapplication.cpp:4185
#22 0x00007f08539fe366 in KApplication::notify (this=0x1243f40, receiver=0x214cf50, event=0x7fff33a3c1d0) at /usr/src/debug/kdelibs-4.4.5/kdeui/kernel/kapplication.cpp:302
#23 0x00007f085213a51c in QCoreApplication::notifyInternal (this=0x1243f40, receiver=0x214cf50, event=0x7fff33a3c1d0) at kernel/qcoreapplication.cpp:726
#24 0x00007f0852163efa in sendEvent (source=0x12586d0) at kernel/qcoreapplication.h:215
#25 socketNotifierSourceDispatch (source=0x12586d0) at kernel/qeventdispatcher_glib.cpp:110
#26 0x00007f084e90dd20 in g_main_dispatch (context=0x1257960) at gmain.c:1960
#27 IA__g_main_context_dispatch (context=0x1257960) at gmain.c:2513
#28 0x00007f084e911b88 in g_main_context_iterate (context=0x1257960, block=<value optimized out>, dispatch=<value optimized out>, self=<value optimized out>) at gmain.c:2591
#29 0x00007f084e911d3c in IA__g_main_context_iteration (context=0x1257960, may_block=1) at gmain.c:2654
#30 0x00007f0852163b43 in QEventDispatcherGlib::processEvents (this=0x12200f0, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:412
#31 0x00007f0852db7f5e in QGuiEventDispatcherGlib::processEvents (this=0x3ff0000000000000, flags=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:204
#32 0x00007f0852138e42 in QEventLoop::processEvents (this=<value optimized out>, flags=) at kernel/qeventloop.cpp:149
#33 0x00007f085213921c in QEventLoop::exec (this=0x7fff33a3c430, flags=) at kernel/qeventloop.cpp:201
#34 0x00007f085213debb in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1003
#35 0x000000000047ee44 in main (argc=<value optimized out>, argv=<value optimized out>) at /usr/src/debug/kdeutils-4.4.5/kgpg/main.cpp:57

This bug may be a duplicate of or related to bug 254013.

Possible duplicates by query: bug 254013.

Reported using DrKonqi
Comment 1 Rolf Eike Beer 2011-10-23 19:30:17 UTC
Does this still happen with the current KGpg version?
Comment 2 Carlos Cámara 2011-10-26 23:14:14 UTC
Created attachment 64918 [details]
New crash information added by DrKonqi

kgpg (2.6.1) on KDE Platform 4.7.2 (4.7.2) using Qt 4.7.4

- What I was doing when the application crashed:
Creating a new pair of keys

- Unusual behavior I noticed:
Nothing, except that when I start KPGP I get a message saying ""An error occurred while scanning your keyring" when kgpg starts.

- Custom settings of the application:

-- Backtrace (Reduced):
#6  data (this=0x8) at ../../include/QtCore/../../src/corelib/tools/qscopedpointer.h:135
[...]
#9  QIODevice::write (this=0x0, data=0x2c0fdb8 "%commit\n", maxSize=8) at io/qiodevice.cpp:1302
#10 0x000000000043d49f in KGpgTransaction::write (this=0x2c86190, a=<optimized out>, lf=<optimized out>) at ../../kgpg/transactions/kgpgtransaction.cpp:226
#11 0x0000000000444cbb in KGpgGenerateKey::postStart (this=0x2c86190) at ../../kgpg/transactions/kgpggeneratekey.cpp:115
#12 0x000000000043e642 in slotProcessStarted (this=<optimized out>) at ../../kgpg/transactions/kgpgtransaction.cpp:153
Comment 3 Rolf Eike Beer 2011-10-27 06:16:12 UTC
I would be interested in this error. Please open a terminal and run

gpg --version >/dev/null

Usually GnuPG will complain that your config is srewed (which was another bug and will now make KGpg immediately exit without crashing).
Comment 4 Carlos Cámara 2011-10-27 06:48:11 UTC
Dear Rolf,

When I try to execute the comand in konsole I get the following message:

gpg: /home/user/.gnupg/gpg.conf:4: argument not expected
gpg: /home/user/.gnupg/gpg.conf:5: invalid option
Comment 5 Rolf Eike Beer 2011-10-27 08:15:01 UTC
> gpg: /home/user/.gnupg/gpg.conf:4: argument not expected
> gpg: /home/user/.gnupg/gpg.conf:5: invalid option

Then please fix your /home/user/.gnupg/gpg.conf first beforestarting KGpg.
This usually comes from programs writing stuff for GnuPG2 into the config
and users with GnuPG 1.4 get problems with it.
Comment 6 Carlos Cámara 2011-10-27 08:17:47 UTC
Thank you Rolf,

I'm quite new to gpg (in fact it's first time I try to use it), could you please tell me  what do you mean by "fixing" /home/user/.gnupg/gpg.conf 

I understand there's a problem in this file, but since I don't know what the problem is, I don't know how to fix it.

Thank you
Comment 7 Carlos Cámara 2011-10-27 09:31:24 UTC
Thank you Eike.

since it was the first time I use gpg I decided to delete /home/user/.gpg folder and execute KGPG again. Now I don't get any warning and I can create a new pair of keys!

Unfortunately that's not exactly true, since when I create the pair of keys and type passfrase I get a message saying that the keys were not created although my system tray says the contrary. The fact is that keys are not created.

Since KGPG does not crash now but fails in creating keys I don't know if I have to create a new issue or stay here.

Regards
Comment 8 Rolf Eike Beer 2011-10-27 10:25:16 UTC
Yes, this is a new issue.